@@ -16,6 +16,7 @@ import (
 	"github.com/elastic/beats/libbeat/common"
 	"github.com/elastic/beats/libbeat/logp"
 	"github.com/elastic/beats/libbeat/monitoring"
+	"github.com/elastic/beats/libbeat/processors"
 )
 
 var (
@@ -40,6 +41,7 @@ type Prospector struct {
 	registry      *harvesterRegistry
 	beatDone      chan struct{}
 	eventCounter  *sync.WaitGroup
+	processors    *processors.Processors
 }
 
 // Prospectorer is the interface common to all prospectors
@@ -83,6 +85,13 @@ func NewProspector(cfg *common.Config, outlet Outlet, beatDone chan struct{}) (*
 	if err != nil {
 		return nil, err
 	}
+
+	f, err := processors.New(prospector.config.Processors)
+	if err != nil {
+		return nil, err
+	}
+
+	prospector.processors = f
 
 	logp.Debug("prospector", "File Configs: %v", prospector.config.Paths)
 
@@ -215,6 +224,15 @@ func (p *Prospector) updateState(event *input.Event) error {
 	event.Fileset = p.config.Fileset
 
 	eventHolder := event.GetData()
+	//run the filters before sending to spooler
+	if event.Bytes > 0 {
+		eventHolder.Event = p.processors.Run(eventHolder.Event)
+	}
+
+	if eventHolder.Event == nil {
+		eventHolder.Metadata.Bytes = 0
+	}
+
 	ok := p.outlet.OnEvent(&eventHolder)
 
 	if !ok {
