@@ -95,6 +95,7 @@ https://github.com/elastic/beats/compare/v5.1.1...master[Check the HEAD diff]
 - close_timeout is also applied when the output is blocking. {pull}3511[3511]
 - Improve handling of different path variants on Windows. {pull}3781[3781]
 - Restructure input.Event to be inline with outputs.Data {pull}3823[3823]
+- Add base for supporting prospector level processors {pull}3853[3853]
 
 *Heartbeat*
 
